<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"
        android:layout_height="25dp"
        android:text="        Сервис                     Статус"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="28dp"
        android:text="@string/textview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <ListView
        android:id="@+id/StatusList"
        android:layout_width="464dp"
        android:layout_height="454dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228">

    </ListView>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:text="@string/checkbox1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:text="@string/checkbox3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:text="@string/checkbox2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <Button
        android:id="@+id/ChangeButton1"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/ChangeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/statusNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="UnknownIdInLayout,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/ChangeButton2"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/ChangeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/statusNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/ChangeButton3"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/ChangeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/statusNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/ChangeButton4"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/ChangeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/statusNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/ChangeButton5"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/ChangeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/statusNameView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"
        tools:ignore="UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>